--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@emurgo/cardano-serialization-lib-asmjs": "^10.2.0",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
     "@mui/styles": "^5.11.9",
@@ -12,21 +13,35 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@walletconnect/web3-provider": "^1.7.1",
+    "assert": "^2.0.0",
+    "axios": "^1.3.3",
     "cardano-crypto.js": "^6.1.1",
+    "crypto-browserify": "^3.12.0",
+    "lodash": "^4.17.21",
+    "dayjs": "^1.10.8",
+    "ethers": "^5.6.2",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "6",
     "react-helmet": "^6.1.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "6",
+    "react-script": "^2.0.5",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
     "store": "^2.0.12",
-    "dayjs": "^1.10.8"
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.0",
+    "web-vitals": "^2.1.4",
+    "web3": "^1.7.3",
+    "web3modal": "^1.9.6"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -46,5 +61,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-app-rewired": "^2.2.1"
   }
 }
