--- a/package.json
+++ b/package.json
@@ -36,7 +36,17 @@
     "url": "^0.11.0",
     "web-vitals": "^2.1.4",
     "web3": "^1.7.3",
-    "web3modal": "^1.9.6"
+    "web3modal": "^1.9.6",
+
+
+
+    "autoprefixer": "^10.4.7",
+    "gatsby": "^4.13.1",
+    "gatsby-plugin-postcss": "^5.13.0",
+    "lucid-cardano": "^0.8.8",
+    "postcss": "^8.4.13",
+
+    "tailwindcss": "^3.0.24"
   },
   "scripts": {
     "start": "react-app-rewired start",
